## PLUXML x.x (sortie : xx/xx/xxxx) ##

[+]	#230: Image d'accroche dans le premier article créer à l'installation
Administration: Tri ordre des catégories et des pages statiques par drag&drop
FIX Suppression fichier plugin update impossible (droit fichier)

## PLUXML 5.6 (sortie : 05/04/2017) ##

[+] PluCSS 1.2
[+] Contrôle de la force des mots de passe saisis
[+] Protection attaque brute force sur l'écran de connexion à l'administration
[+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
[+] Administration > Paramètres > Plugins : ajout filtre de recherche
[+] Administration > Paramètres > Options d'affichage : Nombre d'articles affichés par page dans les mots clés
[+] Administration : recherche possible à partir de l'identifiant d'un article
[+] Administration : suppression fichier install.php à partir du message d'information
[+] Gestionnaire de médias : affichage des miniatures jpeg
[+] Gestionnaire de médias : copie lien image dans le presse-papier
[+] Gestionnaire de médias : champ de recherche/filtre sur le nom des images
[+] Gestionnaire de médias : renommage fichier
[+] Suppression des doublons dans la saisie des tags des articles
[+] Gestion de la méthode onUpdate dans les plugins
[+] Tri des articles par ordre aléatoire configurable à partir de l'administration (Paramètres > Options d'affichage et Catégories)
[+] plxShow:templateCSS - Prise en compte des fichiers css minifiés si disponibles (contribution alexandre-lg)
[+] Réglage de l'affichage de l'indentation des commentaires sur smartphones (contribution kowalsky)
[+] Ajout du hook plxMotorRedir301 dans la classe plxMotor
[+] plxShow::staticList : ajout de la variable #group_status
[+] Thème par défaut : affichage des groupes de pages statiques sous forme de menus déroulant
[+] Plugins : si la langue par défaut n'est pas disponible on tente de charger le fr.php sinon on prend le 1er fichier de langue dispo