@@ -1,6 +1,8 @@
 ## PLUXML x.x (sortie : xx/xx/xxxx) ##
 
 [+]	#230: Image d'accroche dans le premier article créer à l'installation
+[+] #225: Ajout id à la balise <body> de la page auth.php
+[+] Prise en compte du fichier css des plugins sur la page auth.php
 Administration: Tri ordre des catégories et des pages statiques par drag&drop
 FIX Suppression fichier plugin update impossible (droit fichier)
 
